@@ -90,3 +90,5 @@
 - Like gmpy:  lucasu, lucasv, lucasu_mod, lucasv_mod  e.g. lucasu_mod(p,q,k,n)
   See: http://joye.site88.net/papers/JQ96lucas.pdf to make sure we're being
   efficient.
+
+- tests for forcomb.  write _generic_forcomb
