@@ -27,7 +27,7 @@ our @EXPORT_OK =
       miller_rabin_random
       lucas_sequence
       primes twin_primes
-      forprimes forcomposites foroddcomposites fordivisors forpart
+      forprimes forcomposites foroddcomposites fordivisors forpart forcomb
       prime_iterator prime_iterator_object
       next_prime  prev_prime
       prime_count
@@ -863,7 +863,7 @@ __END__
 
 =encoding utf8
 
-=for stopwords forprimes forcomposites foroddcomposites fordivisors forpart Möbius Deléglise Bézout totient moebius mertens liouville znorder irand primesieve uniqued k-tuples von SoE pari yafu fonction qui compte le nombre nombres voor PhD superset sqrt(N) gcd(A^M k-th (10001st primegen libtommath kronecker znprimroot znlog gcd lcm invmod untruncated vecsum gcdext chinese
+=for stopwords forprimes forcomposites foroddcomposites fordivisors forpart forcomb Möbius Deléglise Bézout totient moebius mertens liouville znorder irand primesieve uniqued k-tuples von SoE pari yafu fonction qui compte le nombre nombres voor PhD superset sqrt(N) gcd(A^M k-th (10001st primegen libtommath kronecker znprimroot znlog gcd lcm invmod untruncated vecsum gcdext chinese
 
 =for test_synopsis use v5.14;  my($k,$x);
 
@@ -971,6 +971,9 @@ Version 0.43
   say partitions(1000);
   # Show all prime partitions of 25
   forpart { say "@_" unless scalar grep { !is_prime($_) } @_ } 25;
+  # List all 3-way combinations of an array
+  my @cdata = qw/apple bread curry donut eagle/;
+  forcomb { say join " ", @cdata[@_] } @cdata, 3;
 
   # divisor sum
   my $sigma  = divisor_sum( $n );       # sum of divisors
@@ -1265,6 +1268,28 @@ Each value must be a non-negative integer.  The allowable keys are:
   amax    all elements must be at most this value
   nmin    the array must have at least this many values
   nmax    the array must have at most this many values
+
+
+=head2 forcomb
+
+Given non-negative arguments C<n> and C<k>, the block is called with C<@_>
+set to the C<k> element array of values from C<0> to C<n-1> representing
+the combinations.  While the L<binomial> function gives the total number,
+this function can be used to enumerate the choices.
+
+Rather than give a data array as input, an integer is used for C<n>.
+A convenient way to map to array elements is:
+
+  forcomb { say join " ", @cdata[@_] } @cdata, 3;
+
+where the block maps the combination array C<@_> to array values, the
+argument for C<n> is given the array since it will be evaluated as a scalar
+and hence give the size, and the argument for C<k> is the desired size of
+the combinations.
+
+Like forpart, the index return values are read-only.  Any attempt to
+modify them will result in undefined behavior.
+
 
 =head2 prime_iterator
 
@@ -3365,6 +3390,10 @@ typically much faster and will use less memory, but there are some cases where
 MP:TA is faster (MP:TA stores all entries up to the largest request, while
 MPU:PA stores only a window around the last request).
 
+L<List::Gen> is very interesting and includes a built-in primes iterator as
+well as a C<is_prime> filter for arbitrary sequences.  Unfortunately both
+are very slow.
+
 L<Math::Primality> supports C<is_prime>, C<is_pseudoprime>,
 C<is_strong_pseudoprime>, C<is_strong_lucas_pseudoprime>, C<next_prime>,
 C<prev_prime>, C<prime_count>, and C<is_aks_prime> functionality.
@@ -3396,6 +3425,10 @@ and in fact they use the same algorithm.  The former module uses caching
 of moduli to speed up further operations.  MPU does not do this.  This would
 only be important for cases where the lcm is larger than a native int (noting
 that use in cryptography would always have large moduli).
+
+L<Math::Combinatorics> also has a combination iterator.  It is much slower
+than the XS version in MPU.  Both are memory efficient.  It has more features
+as well as permutations, derangements, and multisets.
 
 L<Math::Pari> supports a lot of features, with a great deal of overlap.  In
 general, MPU will be faster for native 64-bit integers, while it's differs
